# EdgeMindMedical

./: README.md
EdgeMindMedPhi/: .gitignore  FLOW_DIAGRAM.md  README.md  SEQUENCE_DIAGRAM.md  requirements.txt  settings.gradle.kts
EdgeMindMedPhi/app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
EdgeMindMedPhi/app/src/main/: AndroidManifest.xml
EdgeMindMedPhi/app/src/main/kotlin/com/edgemind/: EdgeMindApp.kt  MainActivity.kt
EdgeMindMedPhi/app/src/main/kotlin/com/edgemind/data/: AppDatabase.kt  InteractionDao.kt  Models.kt
EdgeMindMedPhi/app/src/main/kotlin/com/edgemind/inference/: ExecuTorchRunner.kt  LlmInferenceEngine.kt  SlmInferenceEngine.kt  Tokenizer.kt
EdgeMindMedPhi/app/src/main/kotlin/com/edgemind/mcp/: McpClient.kt  McpServer.kt  ToolRegistry.kt
EdgeMindMedPhi/app/src/main/kotlin/com/edgemind/mcp/tools/: AuditTool.kt  InferenceTool.kt  VectorTool.kt
EdgeMindMedPhi/app/src/main/kotlin/com/edgemind/rag/: EmbedModel.kt  FaissIndex.kt  RagPipeline.kt
EdgeMindMedPhi/app/src/main/kotlin/com/edgemind/security/: AuditJournal.kt  GuardModel.kt  IamService.kt
EdgeMindMedPhi/app/src/main/kotlin/com/edgemind/training/: IdleScheduler.kt  InteractionDataset.kt  LoraTrainer.kt
EdgeMindMedPhi/app/src/main/kotlin/com/edgemind/ui/: AssistantScreen.kt  AssistantViewModel.kt  MetricsOverlay.kt
EdgeMindMedPhi/app/src/main/res/values/: strings.xml  themes.xml
EdgeMindMedPhi/cpp/: executorch_jni.cpp  faiss_jni.cpp
EdgeMindMedPhi/data/: clinical_kb.jsonl  clinical_kb_old.jsonl
EdgeMindMedPhi/docs/: executorch-build-troubleshooting.md  flow.md  sequence.md
EdgeMindMedPhi/gradle/: libs.versions.toml
EdgeMindMedPhi/scripts/: build_kb_index.py  export_guard.py  export_minilm.py  export_phi3.py  export_phi4.py  export_whisper.py
